<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="start_message">Start a New Game</string>
    <string name="android_turn">It\'s Android\'s turn.</string>
    <string name="user_turn">It\'s your turn (X).</string>
    <string name="tie">It\'s a tie!</string>
    <string name="user_win">You won!</string>
    <string name="android_win">Android won!</string>
    <string name="user_start">You go first.</string>
    <string name="android_start">Android go first.</string>

    <string name="android">Android</string>
    <string name="user">Human</string>

    <string name="start">Start:</string>

    <string name="wins">Wins:</string>
    <string name="ties">Ties</string>

    <string name="sound_bar">Click Sound</string>
    <string name="sound_bar_on">On</string>
    <string name="sound_bar_off">Off</string>
    <string name="name_level_1">Easy</string>
    <string name="name_level_2">Medium</string>
    <string name="name_level_3">Expert</string>
    <string name="menu_exit">Exit</string>

    <string name="regret">Regret</string>
</resources>