<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="20dp"></TextView>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_human"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minWidth="100dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/user" />

        <RadioButton
            android:id="@+id/radio_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minWidth="100dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/android" />

    </RadioGroup>

</LinearLayout>